Fix: TTF-1333 - font size of message on mobile
https://digitaltools.phe.org.uk/browse/TTF-1333

--- a/app/shared/components/Accent/style.scss
+++ b/app/shared/components/Accent/style.scss
@@ -42,9 +42,11 @@
 
 .accent__text {
   display: block;
+  font-size: 1.6rem;
 
   @include media-breakpoint-up(sm) {
     overflow: hidden;
+    font-size: 1.8rem;
   }
 }
 
